@@ -4,6 +4,7 @@ Copyright (c) 2005-2018 Alon Bar-Lev <alon.barlev@gmail.com>
 ????-???-?? - Version 1.26
 
 * openssl: build with openssl ec disabled
+* openssl: support RSA_NO_PADDING padding, thanks to Selva Nair
 
 2018-08-16 - Version 1.25.1
 
